--- a/orchestration/build.gradle
+++ b/orchestration/build.gradle
@@ -13,5 +13,13 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web' // 웹 MVC, Tomcat 내장
+    implementation 'org.springframework.boot:spring-boot-starter-webflux' // WebClient 지원
+
+    // Lombok
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test' // 테스트 라이브러리
 }
