feat: saga-orchestration 구현

--- a/inventory/src/main/resources/application.yml
+++ b/inventory/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
       ddl-auto: create-drop
     show-sql: true
     database-platform: org.hibernate.dialect.H2Dialect
+    defer-datasource-initialization: true  # data.sql 실행을 DDL 이후로 미룸
 
 management:
   endpoints:
