--- a/choreography/payment/src/main/resources/application.yml
+++ b/choreography/payment/src/main/resources/application.yml
@@ -13,13 +13,19 @@ spring:
     hibernate:
       ddl-auto: create-drop
     show-sql: true
-
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    consumer:
+      group-id: payment-service-group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: "*"
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 server:
   port: 8083
 
-kafka:
-  bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
-  topics:
-    inventory-reserved: inventory-reserved
-    payment-completed: payment-completed
-    payment-failed: payment-failed
+
