--- a/orchestration/build.gradle
+++ b/orchestration/build.gradle
@@ -21,8 +21,11 @@ dependencies {
     implementation project(':inventory')
     implementation project(':payment')
 
-    implementation 'org.springframework.boot:spring-boot-starter-web' // 웹 MVC, Tomcat 내장
-    implementation 'org.springframework.boot:spring-boot-starter-webflux' // WebClient 지원
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'com.h2database:h2'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
     // Lombok
     compileOnly 'org.projectlombok:lombok'
@@ -30,5 +33,5 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-test' // 테스트 라이브러리
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
