--- a/orchestration/build.gradle
+++ b/orchestration/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
 }
