--- a/orchestration/inventory/src/main/resources/application.yml
+++ b/orchestration/inventory/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8083
+  port: 8082
 
 spring:
   application:
@@ -9,7 +9,7 @@ spring:
     url: jdbc:h2:mem:inventorydb
     driver-class-name: org.h2.Driver
     username: sa
-    password: password
+    password:
   
   h2:
     console:
