--- a/orchestration/order/src/main/resources/application.yml
+++ b/orchestration/order/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     url: jdbc:h2:mem:orderdb
     driver-class-name: org.h2.Driver
     username: sa
-    password: password
+    password:
   
   h2:
     console:
