feat: message value 역직렬화 타입 수정

--- a/choreography/inventory/src/main/resources/application.yml
+++ b/choreography/inventory/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
       group-id: inventory-service
       auto-offset-reset: earliest # consumer가 토픽을 읽을 때 어디서부터 읽을 지 지정하는 설정
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       properties:
         spring.json.trusted.packages: "*"
 
