--- a/choreography/inventory/build.gradle
+++ b/choreography/inventory/build.gradle
@@ -22,6 +22,9 @@ dependencies {
     implementation 'org.springframework.kafka:spring-kafka'
     implementation 'com.h2database:h2'
 
+    // Swagger
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+
     // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
