fix: 초기 재고 추가 오류 수정

--- a/choreography/inventory/src/main/resources/application.yml
+++ b/choreography/inventory/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
     hibernate:
       ddl-auto: create-drop
     show-sql: true
+    defer-datasource-initialization: true  # data.sql 실행을 DDL 이후로 미룸
 
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
